-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Query Optimization
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
See TODO in jstests/noPassthrough/query/lookup/lookup_sharded_no_join_opt.js. Removing those lines causes the test to eventually fail with:
"error" : "Error: Error: command failed:
{\n\t\"ok\" : 0,\n\t\"msg\" : \"giving up after validating admin: catalog list operations consistency check failed new Error(\\\"socket exception [CONNECT_ERROR] server [Connection handshake failed. Is your mongod/mongos 3.4 or older? :: caused by :: network error while attempting to run command 'hello' on host 'localhost:20043' :: caused by :: dbclient error communicating with server localhost:20043 :: caused by :: futurize :: caused by :: Connection refused]\\\")\"\n}"
Probably a bad interaction with a sharding consistency check that we need to fix.
- related to
-
SERVER-114763 Do not use join optimizer if any involved collections are sharded (not just the base)
-
- Closed
-