SERVER-112725 Fix join reordering on non-existent collections (#43135)

GitOrigin-RevId: 79b37953fa631c57468de7cf5a9afdaf2ed5620d