jstests/noPassthrough/query/lookup/lookup_sharded_no_join_opt.js
@@ -58,8 +58,4 @@ assert(!joinOptimizationRuns(db, "coll3", "coll2", "coll1"));
 // Still works if we don't reference a sharded collection.
 assert(joinOptimizationRuns(db, "coll3", "coll4", "coll1"));
 
-// TODO SERVER-112725: why do we have to disable join opt here to terminate safely?
-assert(sharded.shard0.getDB("test").adminCommand({setParameter: 1, internalEnableJoinOptimization: false}));
-assert(sharded.shard1.getDB("test").adminCommand({setParameter: 1, internalEnableJoinOptimization: false}));
-
 sharded.stop();
